# mcp-security-scanner

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  main.py  pyproject.toml
mcp_security_profiler/: __init__.py  cli.py  config.py  github_handler.py  profile_agent.py  reporters.py  scanner.py
